DO328-chapter4.2/deployment-hello-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-v2
  name: hello-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-v2
    spec:
      containers:
      - image: quay.io/redhattraining/ossm-maven-simplest:1.0
        name: ossm-maven-simplest
        resources: {}
status: {}
