DO328-chapter4.2/destinationrule-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: headers-dr
spec:
  host: headers
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
